--- a/rebus-tjener/nbproject/project.properties
+++ b/rebus-tjener/nbproject/project.properties
@@ -27,6 +27,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.objectdb.jar=C:\\WD\\490501\\netbeans-7.1.1-201203012225-ml\\objectdb-2.3.7_20\\objectdb-2.3.7_20\\bin\\objectdb.jar
+file.reference.objectdb.jar-1=C:\\WD\\490501\\javalib\\objectdb-2.3.7_12\\bin\\objectdb.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -40,7 +41,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.objectdb.jar}
+    ${file.reference.objectdb.jar}:\
+    ${file.reference.objectdb.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
