--- a/rebus-klient/AndroidManifest.xml
+++ b/rebus-klient/AndroidManifest.xml
@@ -44,6 +44,16 @@
         </activity>
         
         <activity
+            android:name=".GamesAllActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.GAMES_ALL" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        
+        <activity
             android:name=".MapActivity"
             android:label="@string/app_name" >
             <intent-filter>
