--- a/trunk/rebus-tjener/nbproject/project.properties
+++ b/trunk/rebus-tjener/nbproject/project.properties
@@ -26,6 +26,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.javax.servlet.jsp.jstl-1.2.1.jar=C:\\WD\\490501\\javalib\\javax.servlet.jsp.jstl-1.2.1.jar
 file.reference.objectdb.jar-1=C:\\WD\\490501\\javalib\\objectdb-2.3.7_12\\bin\\objectdb.jar
 includes=**
 j2ee.compile.on.save=true
@@ -40,7 +41,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.objectdb.jar-1}
+    ${file.reference.objectdb.jar-1}:\
+    ${file.reference.javax.servlet.jsp.jstl-1.2.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -51,7 +53,8 @@ javac.source=1.6
 javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
