--- a/trunk/rebus-tjener/nbproject/project.properties
+++ b/trunk/rebus-tjener/nbproject/project.properties
@@ -46,7 +46,7 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
-javac.deprecation=false
+javac.deprecation=true
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.6
