--- a/rebus-tjener/nbproject/project.properties
+++ b/rebus-tjener/nbproject/project.properties
@@ -29,8 +29,8 @@ excludes=
 file.reference.javax.servlet.jsp.jstl-1.2.1.jar=C:\\WD\\490501\\javalib\\javax.servlet.jsp.jstl-1.2.1.jar
 file.reference.objectdb.jar-1=C:\\WD\\490501\\javalib\\objectdb-2.3.7_12\\bin\\objectdb.jar
 includes=**
-j2ee.compile.on.save=true
-j2ee.deploy.on.save=true
+j2ee.compile.on.save=false
+j2ee.deploy.on.save=false
 j2ee.platform=1.6-web
 j2ee.platform.classpath=${j2ee.server.home}/modules/javax.mail.jar:${j2ee.server.home}/modules/javax.enterprise.deploy.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl-api.jar:${j2ee.server.home}/modules/javax.resource.jar:${j2ee.server.home}/modules/javax.el-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp-api.jar:${j2ee.server.home}/modules/javax.servlet-api.jar:${j2ee.server.middleware}/mq/lib/jaxm-api.jar:${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/endorsed/javax.annotation.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/javax.security.jacc.jar:${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/weld-osgi-bundle.jar:${j2ee.server.home}/modules/jersey-core.jar:${j2ee.server.home}/modules/javax.management.j2ee.jar:${j2ee.server.home}/modules/javax.transaction.jar:${j2ee.server.home}/modules/javax.persistence.jar:${j2ee.server.home}/modules/javax.ejb.jar:${j2ee.server.home}/modules/javax.jms.jar:${j2ee.server.home}/modules/javax.faces.jar:${j2ee.server.home}/modules/javax.security.auth.message.jar:${j2ee.server.home}/modules/jaxb-osgi.jar
 j2ee.platform.embeddableejb.classpath=${j2ee.server.home}/lib/embedded/glassfish-embedded-static-shell.jar
