--- a/rebus-tjener/nbproject/project.properties
+++ b/rebus-tjener/nbproject/project.properties
@@ -3,6 +3,8 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
+auxiliary.org-netbeans-modules-projectapi.jsf_2e_present=true
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -42,7 +44,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.objectdb.jar-1}:\
-    ${file.reference.javax.servlet.jsp.jstl-1.2.1.jar}
+    ${file.reference.javax.servlet.jsp.jstl-1.2.1.jar}:\
+    ${libs.struts.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
