--- a/trunk/rebus-tjener/nbproject/project.properties
+++ b/trunk/rebus-tjener/nbproject/project.properties
@@ -47,7 +47,7 @@ javac.classpath=\
     ${file.reference.javax.servlet.jsp.jstl-1.2.1.jar}:\
     ${libs.struts.classpath}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-Xlint:unchecked
 javac.debug=true
 javac.deprecation=true
 javac.processorpath=\
@@ -61,7 +61,7 @@ javac.test.classpath=\
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
-javadoc.author=false
+javadoc.author=true
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
 javadoc.nonavbar=false
@@ -70,7 +70,7 @@ javadoc.preview=true
 javadoc.private=false
 javadoc.splitindex=true
 javadoc.use=true
-javadoc.version=false
+javadoc.version=true
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
