--- a/trunk/rebus-klient/AndroidManifest.xml
+++ b/trunk/rebus-klient/AndroidManifest.xml
@@ -37,16 +37,6 @@
         </activity>
         
         <activity
-            android:name=".GamesListActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.GAMES_LIST" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        
-        <activity
             android:name=".GamesAllActivity"
             android:label="@string/app_name" >
             <intent-filter>
@@ -66,10 +56,20 @@
             </intent-filter>
         </activity>
         
+        <activity
+            android:name=".ResultActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.RESULT" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        
         <receiver
-            android:name=".ProximityBroadcastReceiver">
+            android:name=".ProximityIntentReceiver">
             <intent-filter >
-        		<action android:name="student.hin.no.PBR" />        
+        		<action android:name="student.hin.no.PIR" />        
             </intent-filter>
         </receiver>
         
