--- a/trunk/rebus-klient/AndroidManifest.xml
+++ b/trunk/rebus-klient/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:icon="@drawable/rebloop"
@@ -79,7 +80,7 @@
         		<action android:name="student.hin.no.TR" />        
             </intent-filter>
         </receiver>
-            
+        <receiver android:name="Alarm"></receiver>          
             
         
     </application>
